--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Section-1 Top Banner ============================================ -->
     <section class="top-banner">
         <div class="banner-content">
             <h1>Let's come forward with the help of</h1>
@@ -26,6 +27,7 @@
             <a class="anchor-button" href="https://www.google.com" target="_blank">Donate Now</a>
         </div>
     </section>
+    <!-- Section-2 Donate Today ====================================== -->
     <section class="bottom-100px">
         <h2 class="h2-center">Donate Today</h2>
         <p class="text-center-paragraph">if you want to help the victims by donating dry food or medicines then you can
@@ -43,6 +45,7 @@
             <a class="anchor-button text-center" href="https://www.google.com" target="_blank">Donate Now</a>
         </div>
 
+        <!-- Section-3 Our Donate Plan ================================= -->
     </section>
     <section class="bottom-100px">
         <h2 class="h2-center">Our Donate Plan</h2>
@@ -51,6 +54,7 @@
             education for a child.
         </p>
         <div class="display-flex">
+            <!-- Section-3 Food for a Family ===================== -->
             <div class="donate-plan food">
                 <img src="icons/food.png" alt="">
                 <h3>Food for a family</h3>
@@ -59,6 +63,7 @@
                     that include nutritious meals.
                 </p>
             </div>
+            <!-- Section-3 Shelter for a Family ================== -->
             <div class="donate-plan shelter">
                 <img src="icons//shelter.png" alt="">
                 <h3>Shelter for a family</h3>
@@ -67,6 +72,7 @@
                     that are free from violence.
                 </p>
             </div>
+            <!-- Section-3 Education for a Child =================== -->
             <div class="donate-plan education">
                 <img src="icons/Frame-1.png" alt="">
                 <h3>Education for a child</h3>
@@ -75,6 +81,16 @@
                     the future.
                 </p>
             </div>
+        </div>
+    </section>
+    <!-- Section-4 Bonus part-3 -->
+    <section class="background-1">
+        <h1 class="small-donate">A small donation but sometimes it gives joy in the midst of many hardships.</h1>
+        <h3 class="text-center">Want share joy with them?</h3>
+        <div class="text-center">
+            <a class="anchor-button" href="https://www.google.com" target="_blank">Donate Now</a>
+        </div>
+        <div class="background-2">
         </div>
 
     </section>
