--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- Section-4 Bonus part-3 -->
     <section class="background-1">
         <h1 class="small-donate">A small donation but sometimes it gives joy in the midst of many hardships.</h1>
-        <h3 class="text-center">Want share joy with them?</h3>
+        <h3 class="text-center">Want to share joy with them?</h3>
         <div class="text-center">
             <a class="anchor-button" href="https://www.google.com" target="_blank">Donate Now</a>
         </div>
